# MeltCosmos

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/commands/: build-check.md  build-fix.md
.claude/handoff/: debug-and-analysis-spec.md  design.md  spec.md  tasks.md
Source/: LevelMeter.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SampleRateAdapter.cpp  SampleRateAdapter.h
Source/DSP/: AvalancheEngine.cpp  AvalancheEngine.h  DattorroReverb.cpp  DattorroReverb.h  InputDiffuser.h  LevelMeter.h  ModDelay.h  ModDelayLine.h  ReverbTank.cpp  ReverbTank.h  SpaceEngine.cpp  SpaceEngine.h  ToneFilter.h
Tests/: AvalancheTests.cpp  SpaceEngineTests.cpp
Tools/: README.md  analyze.sh  validate.sh
Tools/emverb/_avalanche/: _config.json
scripts/: run-pluginval.sh
